* First version with base functionality to handle Entity-attribute-value model (EAV) pattern.

* CHANGELOG started [Marcus Wyatt]